--- a/package.json
+++ b/package.json
@@ -1,5 +1,39 @@
 {
-  "name": "FermentSite",
+  "name": "ferment_site",
   "private": true,
-  "dependencies": {}
+  "description": "Welcome to FermentSite, an eventbrite clone",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch --mode=development"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jackiemarsh/FermentSite.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jackiemarsh/FermentSite/issues"
+  },
+  "homepage": "https://github.com/jackiemarsh/FermentSite#readme",
+  "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0"
+  }
 }
