--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "16.0.0",
+    "npm": "7.10.0"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch --mode=development"
