Add App component and update entry file

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": "16.0.0",
     "npm": "7.10.0"
-  }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch --mode=development"
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "webpack": "^5.38.1",
