--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development",
+    "webpack": "webpack --watch --mode=development",
     "postinstall": "webpack"
   },
   "repository": {
