--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
   },
   "homepage": "https://github.com/jackiemarsh/FermentSite#readme",
   "dependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
-    "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6"
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "redux-logger": "^3.0.6",
+    "webpack": "^5.62.1"
   }
 }
