--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "Welcome to FermentSite, an eventbrite clone",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "ferment_site.jsx",
   "directories": {
     "lib": "lib",
     "test": "test"
